creat image folder

--- a/index.html
+++ b/index.html
@@ -10,7 +10,83 @@
     <title>Cards</title>
 </head>
 <body>
-<h1 class="our">OUR TEAM</h1>
+<main>
+    <h1 class="our">OUR TEAM</h1>
+    <div class="container"><div class="card">
+        <img src="./image/IMAGE1.png" alt="photo1">
+        <div class="text">
+            <h1>RON SWANSON</h1>
+            <p>Founder</p>
+        </div>
+        <div class="Vectors">
+            <div class="vector1">
+                <img class="vec1" src="./image/Vector1.png" alt="image">
+            </div>
+            <div class="Vector2">
+                <img class="vec2" src="./image/Vector2.png" alt="image2">
+                <img class="vec3" src="./image/Vector3.png" alt="image3">
+            </div>
+            <div class="Vector3">
+
+            </div>
+        </div>
+    </div>
+        <div class="card"><img src="./image/IMAGE1.png" alt="photo1">
+            <div class="text">
+                <h1>RON SWANSON</h1>
+                <p>Founder</p>
+            </div>
+            <div class="Vectors">
+                <div class="vector1">
+                    <img class="vec1" src="./image/Vector1.png" alt="image">
+                </div>
+                <div class="Vector2">
+                    <img class="vec2" src="./image/Vector2.png" alt="image2">
+                    <img class="vec3" src="./image/Vector3.png" alt="image3">
+                </div>
+                <div class="Vector3">
+
+                </div>
+            </div></div>
+        <div class="card">
+            <img src="./image/IMAGE1.png" alt="photo1">
+            <div class="text">
+                <h1>RON SWANSON</h1>
+                <p>Founder</p>
+            </div>
+            <div class="Vectors">
+                <div class="vector1">
+                    <img class="vec1" src="./image/Vector1.png" alt="image">
+                </div>
+                <div class="Vector2">
+                    <img class="vec2" src="./image/Vector2.png" alt="image2">
+                    <img class="vec3" src="./image/Vector3.png" alt="image3">
+                </div>
+                <div class="Vector3">
+
+                </div>
+            </div></div>
+        <div class="card">
+            <img src="./image/IMAGE1.png" alt="photo1">
+            <div class="text">
+                <h1>RON SWANSON</h1>
+                <p>Founder</p>
+            </div>
+            <div class="Vectors">
+                <div class="vector1">
+                    <img class="vec1" src="./image/Vector1.png" alt="image">
+                </div>
+                <div class="Vector2">
+                    <img class="vec2" src="./image/Vector2.png" alt="image2">
+                    <img class="vec3" src="./image/Vector3.png" alt="image3">
+                </div>
+                <div class="Vector3">
+
+                </div>
+            </div></div>
+
+</main>
+
 
 </body>
 </html>
