--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <body>
 <main>
     <h1 class="our">OUR TEAM</h1>
-    <div class="container"><div class="card">
+    <div class="slash">__________</div>
+    <div class="container">
+        <div class="card">
         <img src="./image/IMAGE1.png" alt="photo1">
-        <div class="text">
+        <div>
             <h1>RON SWANSON</h1>
             <p>Founder</p>
         </div>
@@ -27,14 +29,14 @@
                 <img class="vec3" src="./image/Vector3.png" alt="image3">
             </div>
             <div class="Vector3">
-
+                <img class="vec4" src="./image/Mail_1_x2C__Envelope_1.png" alt="image4">
             </div>
         </div>
     </div>
-        <div class="card"><img src="./image/IMAGE1.png" alt="photo1">
-            <div class="text">
-                <h1>RON SWANSON</h1>
-                <p>Founder</p>
+        <div class="card"><img src="./image/IMAGE2.png" alt="photo2">
+            <div>
+                <h1>JULIA DEPISH</h1>
+                <p>Marketing</p>
             </div>
             <div class="Vectors">
                 <div class="vector1">
@@ -45,14 +47,14 @@
                     <img class="vec3" src="./image/Vector3.png" alt="image3">
                 </div>
                 <div class="Vector3">
-
+                    <img class="vec4" src="./image/Mail_1_x2C__Envelope_1.png" alt="image4">
                 </div>
             </div></div>
         <div class="card">
-            <img src="./image/IMAGE1.png" alt="photo1">
-            <div class="text">
-                <h1>RON SWANSON</h1>
-                <p>Founder</p>
+            <img src="./image/IMAGE3.png" alt="photo3">
+            <div>
+                <h1>DANNY DEVRY</h1>
+                <p>Designer</p>
             </div>
             <div class="Vectors">
                 <div class="vector1">
@@ -63,14 +65,16 @@
                     <img class="vec3" src="./image/Vector3.png" alt="image3">
                 </div>
                 <div class="Vector3">
-
+                    <img class="vec4" src="./image/Mail_1_x2C__Envelope_1.png" alt="image4">
                 </div>
             </div></div>
         <div class="card">
-            <img src="./image/IMAGE1.png" alt="photo1">
-            <div class="text">
-                <h1>RON SWANSON</h1>
-                <p>Founder</p>
+            <img src="./image/IMAGE4.png" alt="photo4">
+            <div>
+                <h1>LISA SMITH</h1>
+                <p class="text">The main officer in this region,that create and update such difficult project according
+                    to the historical situation and team position, works with different stuff and algorithm, includes
+                    develop from fourth library and language.</p>
             </div>
             <div class="Vectors">
                 <div class="vector1">
@@ -81,12 +85,12 @@
                     <img class="vec3" src="./image/Vector3.png" alt="image3">
                 </div>
                 <div class="Vector3">
-
+                    <img class="vec4" src="./image/Mail_1_x2C__Envelope_1.png" alt="image4">
                 </div>
             </div></div>
+    </div>
 
 </main>
-
 
 </body>
 </html>
