remove styles Vector1-4, edit margin, padding

--- a/index.html
+++ b/index.html
@@ -11,86 +11,74 @@
 </head>
 <body>
 <main>
-    <h1 class="our">OUR TEAM</h1>
-    <div class="slash">__________</div>
-    <div class="container">
-        <div class="card">
-        <img src="./image/IMAGE1.png" alt="photo1">
-        <div>
-            <h1>RON SWANSON</h1>
-            <p>Founder</p>
-        </div>
-        <div class="Vectors">
-            <div class="vector1">
-                <img class="vec1" src="./image/Vector1.png" alt="image">
+    <div class="section-5">
+        <h1 class="our">OUR TEAM</h1>
+        <div class="border"></div>
+        <div class="container">
+            <div class="card">
+                <img src="./image/IMAGE1.png" alt="photo1">
+                <h1>RON SWANSON</h1>
+                <p>Founder</p>
+                <div class="Vectors">
+                    <img src="./image/twit.svg" alt="image">
+                </div>
+                <div class="Vectors">
+                    <img src="./image/Group.svg" alt="image2">
+                </div>
+                <div class="Vectors">
+                    <img src="./image/Mail_1_x2C__Envelope_1.svg" alt="image4">
+                </div>
             </div>
-            <div class="Vector2">
-                <img class="vec2" src="./image/Vector2.png" alt="image2">
-                <img class="vec3" src="./image/Vector3.png" alt="image3">
-            </div>
-            <div class="Vector3">
-                <img class="vec4" src="./image/Mail_1_x2C__Envelope_1.png" alt="image4">
-            </div>
-        </div>
-    </div>
-        <div class="card"><img src="./image/IMAGE2.png" alt="photo2">
-            <div>
+            <div class="card">
+                <img src="./image/IMAGE2.png" alt="photo2">
                 <h1>JULIA DEPISH</h1>
                 <p>Marketing</p>
+                <div class="Vectors">
+                    <img src="./image/twit.svg" alt="image">
+                </div>
+                <div class="Vectors">
+                    <img src="./image/Group.svg" alt="image2">
+                </div>
+                <div class="Vectors">
+                    <img src="./image/Mail_1_x2C__Envelope_1.svg" alt="image4">
+                </div>
             </div>
-            <div class="Vectors">
-                <div class="vector1">
-                    <img class="vec1" src="./image/Vector1.png" alt="image">
-                </div>
-                <div class="Vector2">
-                    <img class="vec2" src="./image/Vector2.png" alt="image2">
-                    <img class="vec3" src="./image/Vector3.png" alt="image3">
-                </div>
-                <div class="Vector3">
-                    <img class="vec4" src="./image/Mail_1_x2C__Envelope_1.png" alt="image4">
-                </div>
-            </div></div>
-        <div class="card">
+            <div class="card">
             <img src="./image/IMAGE3.png" alt="photo3">
-            <div>
-                <h1>DANNY DEVRY</h1>
-                <p>Designer</p>
-            </div>
+            <h1>DANNY DEVRY</h1>
+            <p>Designer</p>
             <div class="Vectors">
-                <div class="vector1">
-                    <img class="vec1" src="./image/Vector1.png" alt="image">
-                </div>
-                <div class="Vector2">
-                    <img class="vec2" src="./image/Vector2.png" alt="image2">
-                    <img class="vec3" src="./image/Vector3.png" alt="image3">
-                </div>
-                <div class="Vector3">
-                    <img class="vec4" src="./image/Mail_1_x2C__Envelope_1.png" alt="image4">
-                </div>
-            </div></div>
+                <img src="./image/inst.svg" alt="inst">
+            </div><div class="Vectors">
+                <img src="./image/twit.svg" alt="image">
+            </div><div class="Vectors">
+                <img src="./image/Be.svg" alt="Be">
+            </div><div class="Vectors">
+                <img src="./image/Explor.svg" alt="Explorer">
+            </div><div class="Vectors">
+                <img src="./image/Group.svg" alt="image2">
+            </div><div class="Vectors">
+                <img src="./image/Mail_1_x2C__Envelope_1.svg" alt="image4">
+            </div>
+        </div>
         <div class="card">
             <img src="./image/IMAGE4.png" alt="photo4">
-            <div>
-                <h1>LISA SMITH</h1>
-                <p class="text">The main officer in this region,that create and update such difficult project according
-                    to the historical situation and team position, works with different stuff and algorithm, includes
-                    develop from fourth library and language.</p>
+            <h1>LISA SMITH</h1>
+            <p class="text">The main officer in this region,that create and update such difficult project according
+                to the historical situation and team position, works with different stuff and algorithm, includes
+                develop from fourth library and language.</p>
+            <div class="Vectors">
+                <img src="./image/twit.svg" alt="image">
             </div>
             <div class="Vectors">
-                <div class="vector1">
-                    <img class="vec1" src="./image/Vector1.png" alt="image">
-                </div>
-                <div class="Vector2">
-                    <img class="vec2" src="./image/Vector2.png" alt="image2">
-                    <img class="vec3" src="./image/Vector3.png" alt="image3">
-                </div>
-                <div class="Vector3">
-                    <img class="vec4" src="./image/Mail_1_x2C__Envelope_1.png" alt="image4">
-                </div>
-            </div></div>
+                <img src="./image/Group.svg" alt="image2">
+            </div>
+            <div class="Vectors">
+                <img src="./image/Mail_1_x2C__Envelope_1.svg" alt="image4">
+            </div>
+        </div>
     </div>
-
+    </div>
 </main>
-
 </body>
 </html>
